--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
 
       (async () => {
         console.log("Cargando modelo...");
-        modelo = await tf.loadLayersModel("modelo_para_web/model.json");
+        modelo = await tf.loadLayersModel("model.json");
         console.log("Modelo cargado");
       })();
 
